update: research. added modelos bassi and  Re

--- a/research/ExamDynamics/Paper_UCL.ipynb
+++ b/research/ExamDynamics/Paper_UCL.ipynb
@@ -21,6 +21,21 @@
     }
    ],
    "source": [
+    "Paper_UCL\n",
+    "￼\n",
+    "￼Logout\n",
+    "Python 3  Trusted \n",
+    "File\n",
+    "Edit\n",
+    "View\n",
+    "Insert\n",
+    "Cell\n",
+    "Kernel\n",
+    "Widgets\n",
+    "Help\n",
+    "￼￼￼￼￼￼￼￼Run￼￼￼￼\n",
+    "Markdown\n",
+    "￼\n",
     "import sys\n",
     "from pathlib import Path\n",
     "sys.path.insert(1, '../../src/SEIR/')\n",
