--- a/research/R_calculation.ipynb
+++ b/research/R_calculation.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/samuel/anaconda3/lib/python3.8/site-packages/rpy2/robjects/pandas2ri.py:17: FutureWarning: pandas.core.index is deprecated and will be removed in a future version.  The public classes are available in the top-level namespace.\n",
+      "  from pandas.core.index import Index as PandasIndex\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -58,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -67,13 +76,14 @@
      "text": [
       "Importing General Data\n",
       "Importing Population\n",
+      "Dlab Endpoint Error\n",
+      "Importing Population\n",
       "Importing Active infected\n",
       "Importing Accumulated Infected\n",
       "Importing Daily Infected\n",
-      "Importing Sochimi Data 2\n",
+      "Importing ICU Beds Data from Minciencia\n",
       "Importing Deaths by DEIS\n",
       "Importing Active Infected by Minciencia\n",
-      "Importing Hospitalized/NonHospitalized Deaths\n",
       "Done\n"
      ]
     }
@@ -86,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,16 +110,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "results = eps.estimate_R(rdf[1], method=\"parametric_si\", config = eps.make_config(t_start = start,t_end = end,mean_si = 5,std_si = 2))\n"
+    "results = eps.estimate_R(rdf[1], method=\"parametric_si\", config = eps.make_config(t_start = start,t_end = end,mean_si = 5,std_si = 2))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -242,78 +252,78 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>163</th>\n",
-       "      <td>165.0</td>\n",
-       "      <td>170.0</td>\n",
-       "      <td>1.031779</td>\n",
-       "      <td>0.032628</td>\n",
-       "      <td>0.968812</td>\n",
-       "      <td>0.978704</td>\n",
-       "      <td>1.009588</td>\n",
-       "      <td>1.031435</td>\n",
-       "      <td>1.053594</td>\n",
-       "      <td>1.086027</td>\n",
-       "      <td>1.096699</td>\n",
+       "      <th>464</th>\n",
+       "      <td>466.0</td>\n",
+       "      <td>471.0</td>\n",
+       "      <td>1.011098</td>\n",
+       "      <td>0.019088</td>\n",
+       "      <td>0.974030</td>\n",
+       "      <td>0.979908</td>\n",
+       "      <td>0.998159</td>\n",
+       "      <td>1.010978</td>\n",
+       "      <td>1.023906</td>\n",
+       "      <td>1.042698</td>\n",
+       "      <td>1.048849</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>164</th>\n",
-       "      <td>166.0</td>\n",
-       "      <td>171.0</td>\n",
-       "      <td>1.031583</td>\n",
-       "      <td>0.032524</td>\n",
-       "      <td>0.968814</td>\n",
-       "      <td>0.978675</td>\n",
-       "      <td>1.009464</td>\n",
-       "      <td>1.031241</td>\n",
-       "      <td>1.053330</td>\n",
-       "      <td>1.085657</td>\n",
-       "      <td>1.096295</td>\n",
+       "      <th>465</th>\n",
+       "      <td>467.0</td>\n",
+       "      <td>472.0</td>\n",
+       "      <td>1.011074</td>\n",
+       "      <td>0.019067</td>\n",
+       "      <td>0.974046</td>\n",
+       "      <td>0.979918</td>\n",
+       "      <td>0.998150</td>\n",
+       "      <td>1.010955</td>\n",
+       "      <td>1.023868</td>\n",
+       "      <td>1.042639</td>\n",
+       "      <td>1.048784</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>165</th>\n",
-       "      <td>167.0</td>\n",
-       "      <td>172.0</td>\n",
-       "      <td>1.031390</td>\n",
-       "      <td>0.032421</td>\n",
-       "      <td>0.968816</td>\n",
-       "      <td>0.978647</td>\n",
-       "      <td>1.009341</td>\n",
-       "      <td>1.031050</td>\n",
-       "      <td>1.053069</td>\n",
-       "      <td>1.085292</td>\n",
-       "      <td>1.095895</td>\n",
+       "      <th>466</th>\n",
+       "      <td>468.0</td>\n",
+       "      <td>473.0</td>\n",
+       "      <td>1.011051</td>\n",
+       "      <td>0.019046</td>\n",
+       "      <td>0.974062</td>\n",
+       "      <td>0.979928</td>\n",
+       "      <td>0.998140</td>\n",
+       "      <td>1.010931</td>\n",
+       "      <td>1.023831</td>\n",
+       "      <td>1.042581</td>\n",
+       "      <td>1.048719</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>166</th>\n",
-       "      <td>168.0</td>\n",
-       "      <td>173.0</td>\n",
-       "      <td>1.031199</td>\n",
-       "      <td>0.032320</td>\n",
-       "      <td>0.968819</td>\n",
-       "      <td>0.978620</td>\n",
-       "      <td>1.009220</td>\n",
-       "      <td>1.030862</td>\n",
-       "      <td>1.052811</td>\n",
-       "      <td>1.084930</td>\n",
-       "      <td>1.095499</td>\n",
+       "      <th>467</th>\n",
+       "      <td>469.0</td>\n",
+       "      <td>474.0</td>\n",
+       "      <td>1.011027</td>\n",
+       "      <td>0.019025</td>\n",
+       "      <td>0.974078</td>\n",
+       "      <td>0.979938</td>\n",
+       "      <td>0.998130</td>\n",
+       "      <td>1.010907</td>\n",
+       "      <td>1.023793</td>\n",
+       "      <td>1.042523</td>\n",
+       "      <td>1.048654</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>167</th>\n",
-       "      <td>169.0</td>\n",
-       "      <td>174.0</td>\n",
-       "      <td>1.031011</td>\n",
-       "      <td>0.032219</td>\n",
-       "      <td>0.968822</td>\n",
-       "      <td>0.978594</td>\n",
-       "      <td>1.009100</td>\n",
-       "      <td>1.030675</td>\n",
-       "      <td>1.052556</td>\n",
-       "      <td>1.084573</td>\n",
-       "      <td>1.095107</td>\n",
+       "      <th>468</th>\n",
+       "      <td>470.0</td>\n",
+       "      <td>475.0</td>\n",
+       "      <td>1.011003</td>\n",
+       "      <td>0.019005</td>\n",
+       "      <td>0.974094</td>\n",
+       "      <td>0.979948</td>\n",
+       "      <td>0.998121</td>\n",
+       "      <td>1.010884</td>\n",
+       "      <td>1.023756</td>\n",
+       "      <td>1.042465</td>\n",
+       "      <td>1.048589</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>168 rows × 11 columns</p>\n",
+       "<p>469 rows × 11 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -324,11 +334,11 @@
        "3        5.0   10.0  3.292244  0.520549           2.352027          2.485293   \n",
        "4        6.0   11.0  2.728476  0.402292           1.997588          2.102160   \n",
        "..       ...    ...       ...       ...                ...               ...   \n",
-       "163    165.0  170.0  1.031779  0.032628           0.968812          0.978704   \n",
-       "164    166.0  171.0  1.031583  0.032524           0.968814          0.978675   \n",
-       "165    167.0  172.0  1.031390  0.032421           0.968816          0.978647   \n",
-       "166    168.0  173.0  1.031199  0.032320           0.968819          0.978620   \n",
-       "167    169.0  174.0  1.031011  0.032219           0.968822          0.978594   \n",
+       "464    466.0  471.0  1.011098  0.019088           0.974030          0.979908   \n",
+       "465    467.0  472.0  1.011074  0.019067           0.974046          0.979918   \n",
+       "466    468.0  473.0  1.011051  0.019046           0.974062          0.979928   \n",
+       "467    469.0  474.0  1.011027  0.019025           0.974078          0.979938   \n",
+       "468    470.0  475.0  1.011003  0.019005           0.974094          0.979948   \n",
        "\n",
        "     Quantile.0.25(R)  Median(R)  Quantile.0.75(R)  Quantile.0.95(R)  \\\n",
        "0            6.631352   7.691290          8.858732         10.734380   \n",
@@ -337,11 +347,11 @@
        "3            2.927813   3.264850          3.626829          4.192651   \n",
        "4            2.447451   2.708730          2.987987          3.422155   \n",
        "..                ...        ...               ...               ...   \n",
-       "163          1.009588   1.031435          1.053594          1.086027   \n",
-       "164          1.009464   1.031241          1.053330          1.085657   \n",
-       "165          1.009341   1.031050          1.053069          1.085292   \n",
-       "166          1.009220   1.030862          1.052811          1.084930   \n",
-       "167          1.009100   1.030675          1.052556          1.084573   \n",
+       "464          0.998159   1.010978          1.023906          1.042698   \n",
+       "465          0.998150   1.010955          1.023868          1.042639   \n",
+       "466          0.998140   1.010931          1.023831          1.042581   \n",
+       "467          0.998130   1.010907          1.023793          1.042523   \n",
+       "468          0.998121   1.010884          1.023756          1.042465   \n",
        "\n",
        "     Quantile.0.975(R)  \n",
        "0            11.394722  \n",
@@ -350,16 +360,16 @@
        "3             4.388091  \n",
        "4             3.571548  \n",
        "..                 ...  \n",
-       "163           1.096699  \n",
-       "164           1.096295  \n",
-       "165           1.095895  \n",
-       "166           1.095499  \n",
-       "167           1.095107  \n",
+       "464           1.048849  \n",
+       "465           1.048784  \n",
+       "466           1.048719  \n",
+       "467           1.048654  \n",
+       "468           1.048589  \n",
        "\n",
-       "[168 rows x 11 columns]"
+       "[469 rows x 11 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -395,40 +405,33 @@
      "text": [
       "Import scikits-odes\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "SolverReturn(flag=<StatusEnum.SUCCESS: 0>, values=SolverVariables(t=array([0.0000e+00, 1.0000e-02, 2.0000e-02, ..., 4.9998e+02, 4.9999e+02,\n",
-       "       5.0000e+02]), y=array([[9.99760000e+05, 1.40000000e+02, 1.00000000e+02, ...,\n",
-       "        0.00000000e+00, 0.00000000e+00, 0.00000000e+00],\n",
-       "       [9.99759850e+05, 1.39870229e+02, 1.00179780e+02, ...,\n",
-       "        0.00000000e+00, 0.00000000e+00, 0.00000000e+00],\n",
-       "       [9.99759700e+05, 1.39740986e+02, 1.00359122e+02, ...,\n",
-       "        0.00000000e+00, 0.00000000e+00, 0.00000000e+00],\n",
-       "       ...,\n",
-       "       [4.17173368e+05, 4.02626934e+01, 1.11007585e+02, ...,\n",
-       "        0.00000000e+00, 0.00000000e+00, 0.00000000e+00],\n",
-       "       [4.17173298e+05, 4.02516337e+01, 1.10977107e+02, ...,\n",
-       "        0.00000000e+00, 0.00000000e+00, 0.00000000e+00],\n",
-       "       [4.17173229e+05, 4.02405770e+01, 1.10946637e+02, ...,\n",
-       "        0.00000000e+00, 0.00000000e+00, 0.00000000e+00]])), errors=SolverVariables(t=None, y=None), roots=SolverVariables(t=None, y=None), tstop=SolverVariables(t=None, y=None), message='Successful function return.')"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "sim.integr_sci()"
+    "sim.integr()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "If using all scalar values, you must pass an index",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-11-c155ebc8d123>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m{\u001b[0m\u001b[0;34m\"dates\"\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0msim\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mt\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"I\"\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0msim\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mI_d\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mrdf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpandas2ri\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpy2ri\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrobjects\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mr\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mwindow\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m5\u001b[0m  \u001b[0;31m# always 5, test\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mstart\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mseq\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mwindow\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.local/lib/python3.8/site-packages/pandas/core/frame.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, data, index, columns, dtype, copy)\u001b[0m\n\u001b[1;32m    466\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    467\u001b[0m         \u001b[0;32melif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdict\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 468\u001b[0;31m             \u001b[0mmgr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minit_dict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mindex\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcolumns\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdtype\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    469\u001b[0m         \u001b[0;32melif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mma\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mMaskedArray\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    470\u001b[0m             \u001b[0;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mma\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmrecords\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mmrecords\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.local/lib/python3.8/site-packages/pandas/core/internals/construction.py\u001b[0m in \u001b[0;36minit_dict\u001b[0;34m(data, index, columns, dtype)\u001b[0m\n\u001b[1;32m    281\u001b[0m             \u001b[0marr\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mis_datetime64tz_dtype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0marr\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32melse\u001b[0m \u001b[0marr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcopy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0marr\u001b[0m \u001b[0;32min\u001b[0m \u001b[0marrays\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    282\u001b[0m         ]\n\u001b[0;32m--> 283\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0marrays_to_mgr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0marrays\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdata_names\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mindex\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcolumns\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdtype\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    284\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    285\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.local/lib/python3.8/site-packages/pandas/core/internals/construction.py\u001b[0m in \u001b[0;36marrays_to_mgr\u001b[0;34m(arrays, arr_names, index, columns, dtype, verify_integrity)\u001b[0m\n\u001b[1;32m     76\u001b[0m         \u001b[0;31m# figure out the index, if necessary\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     77\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mindex\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 78\u001b[0;31m             \u001b[0mindex\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mextract_index\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0marrays\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     79\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     80\u001b[0m             \u001b[0mindex\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mensure_index\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.local/lib/python3.8/site-packages/pandas/core/internals/construction.py\u001b[0m in \u001b[0;36mextract_index\u001b[0;34m(data)\u001b[0m\n\u001b[1;32m    385\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    386\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mindexes\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mraw_lengths\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 387\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"If using all scalar values, you must pass an index\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    388\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    389\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mhave_series\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: If using all scalar values, you must pass an index"
+     ]
+    }
+   ],
    "source": [
     "df = pd.DataFrame({\"dates\":sim.t,\"I\":sim.I_d})\n",
     "rdf = pandas2ri.py2ri(df)\n",
