--- a/Examples_2/cv19functions.ipynb
+++ b/Examples_2/cv19functions.ipynb
@@ -291,6 +291,336 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Saturation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sat = cv19functions.saturation(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = cv19functions.build(5)\n",
+    "b = cv19functions.build(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.8048513878454153e-35"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sat(0,b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import importlib"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "importlib.reload(cv19functions)\n",
+    "import cv19functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "13"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cv19functions.functionAddition(10,3)(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'__name__': '__main__',\n",
+       " '__doc__': 'Automatically created module for IPython interactive environment',\n",
+       " '__package__': None,\n",
+       " '__loader__': None,\n",
+       " '__spec__': None,\n",
+       " '__builtin__': <module 'builtins' (built-in)>,\n",
+       " '__builtins__': <module 'builtins' (built-in)>,\n",
+       " '_ih': ['',\n",
+       "  \"import numpy as np\\nimport pandas as pd\\nimport matplotlib.dates as mdates \\n\\nimport platform\\nOS = platform.system()\\n\\nimport matplotlib.pyplot as plt\\nif OS == 'Linux':    \\n    get_ipython().run_line_magic('matplotlib', 'tk')\\n    print('Linux')\\nelif OS == 'Windows':\\n    get_ipython().run_line_magic('matplotlib', 'qt')\\n    print('Windows')\\nelif OS == 'Darwin':\\n    get_ipython().run_line_magic('matplotlib', 'tk')\\n    print('Mac (Funciona?)')\\nelse:\\n    print('OS not detected :-|')\\n\\nimport sys\\nfrom pathlib import Path\\nsys.path.insert(1, '../src2/models/')\\nsys.path.insert(1, '../src2/utils/')\\nsys.path.insert(1, '../src2/data/')\\n\\nimport cv19functions\",\n",
+       "  '#Create time range\\nt = np.arange(0,60,0.01)',\n",
+       "  'sat = cv19functions.saturation(5)',\n",
+       "  'sat(10)',\n",
+       "  'sat(1)',\n",
+       "  'import importlib',\n",
+       "  'import cv19functions',\n",
+       "  'import cv19functions\\nimportlib.reload(cv19functions)\\nfrom cv19functions import cv19functions',\n",
+       "  'importlib.reload(cv19functions)\\nimport cv19functions',\n",
+       "  'sat = cv19functions.saturation(5)',\n",
+       "  'sat(1)',\n",
+       "  'sat(10)',\n",
+       "  'sat(1)',\n",
+       "  'sat = cv19functions.saturation(5)',\n",
+       "  'sat(1)',\n",
+       "  'sat(100)',\n",
+       "  'sat(0)',\n",
+       "  'sat(-30)',\n",
+       "  'cv19functions.build(5)',\n",
+       "  'a = cv19functions.build(5)',\n",
+       "  'a(10)',\n",
+       "  'a(0)',\n",
+       "  'a(-10)',\n",
+       "  'importlib.reload(cv19functions)\\nimport cv19functions',\n",
+       "  'sat = cv19functions.saturation(5)',\n",
+       "  'sat(0,30)',\n",
+       "  'cv19functions.functionAddition(10)',\n",
+       "  'cv19functions.functionAddition(10)(0)',\n",
+       "  'cv19functions.functionAddition(10,1)(0)',\n",
+       "  'importlib.reload(cv19functions)\\nimport cv19functions',\n",
+       "  'cv19functions.functionAddition(10,1)(0)',\n",
+       "  'cv19functions.functionAddition(10,1)(10)',\n",
+       "  'cv19functions.functionAddition(10)(10)',\n",
+       "  'cv19functions.functionAddition(10,3)(10)',\n",
+       "  'sat = cv19functions.saturation(5)',\n",
+       "  'a = cv19functions.build(5)',\n",
+       "  'sat(0,30)',\n",
+       "  'a = cv19functions.build(5)',\n",
+       "  'sat = cv19functions.saturation(a)',\n",
+       "  'sat(0,30)',\n",
+       "  'sat(0,2)',\n",
+       "  'a = cv19functions.build(5)\\nb = cv19functions.build(8)',\n",
+       "  'sat(0,2,b)',\n",
+       "  'sat(0,b)',\n",
+       "  'locals()'],\n",
+       " '_oh': {11: 3.7200759760208356e-44,\n",
+       "  12: 3.7200759760208356e-44,\n",
+       "  13: 3.7200759760208356e-44,\n",
+       "  15: 3.7200759760208356e-44,\n",
+       "  16: 3.7200759760208356e-44,\n",
+       "  17: 3.7200759760208356e-44,\n",
+       "  18: 3.7200759760208356e-44,\n",
+       "  19: <function cv19functions.build.<locals>.out(t)>,\n",
+       "  21: 5,\n",
+       "  22: 5,\n",
+       "  23: 5,\n",
+       "  27: <function cv19functions.functionAddition.<locals>.f(t)>,\n",
+       "  31: 11,\n",
+       "  32: 11,\n",
+       "  33: 10,\n",
+       "  34: 13,\n",
+       "  37: 1.0,\n",
+       "  40: 1.0,\n",
+       "  41: 8.75651076269652e-27},\n",
+       " '_dh': ['/home/samuel/covid19geomodeller/Examples_2'],\n",
+       " 'In': ['',\n",
+       "  \"import numpy as np\\nimport pandas as pd\\nimport matplotlib.dates as mdates \\n\\nimport platform\\nOS = platform.system()\\n\\nimport matplotlib.pyplot as plt\\nif OS == 'Linux':    \\n    get_ipython().run_line_magic('matplotlib', 'tk')\\n    print('Linux')\\nelif OS == 'Windows':\\n    get_ipython().run_line_magic('matplotlib', 'qt')\\n    print('Windows')\\nelif OS == 'Darwin':\\n    get_ipython().run_line_magic('matplotlib', 'tk')\\n    print('Mac (Funciona?)')\\nelse:\\n    print('OS not detected :-|')\\n\\nimport sys\\nfrom pathlib import Path\\nsys.path.insert(1, '../src2/models/')\\nsys.path.insert(1, '../src2/utils/')\\nsys.path.insert(1, '../src2/data/')\\n\\nimport cv19functions\",\n",
+       "  '#Create time range\\nt = np.arange(0,60,0.01)',\n",
+       "  'sat = cv19functions.saturation(5)',\n",
+       "  'sat(10)',\n",
+       "  'sat(1)',\n",
+       "  'import importlib',\n",
+       "  'import cv19functions',\n",
+       "  'import cv19functions\\nimportlib.reload(cv19functions)\\nfrom cv19functions import cv19functions',\n",
+       "  'importlib.reload(cv19functions)\\nimport cv19functions',\n",
+       "  'sat = cv19functions.saturation(5)',\n",
+       "  'sat(1)',\n",
+       "  'sat(10)',\n",
+       "  'sat(1)',\n",
+       "  'sat = cv19functions.saturation(5)',\n",
+       "  'sat(1)',\n",
+       "  'sat(100)',\n",
+       "  'sat(0)',\n",
+       "  'sat(-30)',\n",
+       "  'cv19functions.build(5)',\n",
+       "  'a = cv19functions.build(5)',\n",
+       "  'a(10)',\n",
+       "  'a(0)',\n",
+       "  'a(-10)',\n",
+       "  'importlib.reload(cv19functions)\\nimport cv19functions',\n",
+       "  'sat = cv19functions.saturation(5)',\n",
+       "  'sat(0,30)',\n",
+       "  'cv19functions.functionAddition(10)',\n",
+       "  'cv19functions.functionAddition(10)(0)',\n",
+       "  'cv19functions.functionAddition(10,1)(0)',\n",
+       "  'importlib.reload(cv19functions)\\nimport cv19functions',\n",
+       "  'cv19functions.functionAddition(10,1)(0)',\n",
+       "  'cv19functions.functionAddition(10,1)(10)',\n",
+       "  'cv19functions.functionAddition(10)(10)',\n",
+       "  'cv19functions.functionAddition(10,3)(10)',\n",
+       "  'sat = cv19functions.saturation(5)',\n",
+       "  'a = cv19functions.build(5)',\n",
+       "  'sat(0,30)',\n",
+       "  'a = cv19functions.build(5)',\n",
+       "  'sat = cv19functions.saturation(a)',\n",
+       "  'sat(0,30)',\n",
+       "  'sat(0,2)',\n",
+       "  'a = cv19functions.build(5)\\nb = cv19functions.build(8)',\n",
+       "  'sat(0,2,b)',\n",
+       "  'sat(0,b)',\n",
+       "  'locals()'],\n",
+       " 'Out': {11: 3.7200759760208356e-44,\n",
+       "  12: 3.7200759760208356e-44,\n",
+       "  13: 3.7200759760208356e-44,\n",
+       "  15: 3.7200759760208356e-44,\n",
+       "  16: 3.7200759760208356e-44,\n",
+       "  17: 3.7200759760208356e-44,\n",
+       "  18: 3.7200759760208356e-44,\n",
+       "  19: <function cv19functions.build.<locals>.out(t)>,\n",
+       "  21: 5,\n",
+       "  22: 5,\n",
+       "  23: 5,\n",
+       "  27: <function cv19functions.functionAddition.<locals>.f(t)>,\n",
+       "  31: 11,\n",
+       "  32: 11,\n",
+       "  33: 10,\n",
+       "  34: 13,\n",
+       "  37: 1.0,\n",
+       "  40: 1.0,\n",
+       "  41: 8.75651076269652e-27},\n",
+       " 'get_ipython': <bound method InteractiveShell.get_ipython of <ipykernel.zmqshell.ZMQInteractiveShell object at 0x7f0eff51d040>>,\n",
+       " 'exit': <IPython.core.autocall.ZMQExitAutocall at 0x7f0efc474730>,\n",
+       " 'quit': <IPython.core.autocall.ZMQExitAutocall at 0x7f0efc474730>,\n",
+       " '_': 8.75651076269652e-27,\n",
+       " '__': 1.0,\n",
+       " '___': 1.0,\n",
+       " '_i': 'sat(0,b)',\n",
+       " '_ii': 'sat(0,2,b)',\n",
+       " '_iii': 'a = cv19functions.build(5)\\nb = cv19functions.build(8)',\n",
+       " '_i1': \"import numpy as np\\nimport pandas as pd\\nimport matplotlib.dates as mdates \\n\\nimport platform\\nOS = platform.system()\\n\\nimport matplotlib.pyplot as plt\\nif OS == 'Linux':    \\n    %matplotlib tk\\n    print('Linux')\\nelif OS == 'Windows':\\n    %matplotlib qt\\n    print('Windows')\\nelif OS == 'Darwin':\\n    %matplotlib tk\\n    print('Mac (Funciona?)')\\nelse:\\n    print('OS not detected :-|')\\n\\nimport sys\\nfrom pathlib import Path\\nsys.path.insert(1, '../src2/models/')\\nsys.path.insert(1, '../src2/utils/')\\nsys.path.insert(1, '../src2/data/')\\n\\nimport cv19functions\",\n",
+       " 'np': <module 'numpy' from '/home/samuel/.local/lib/python3.8/site-packages/numpy/__init__.py'>,\n",
+       " 'pd': <module 'pandas' from '/home/samuel/.local/lib/python3.8/site-packages/pandas/__init__.py'>,\n",
+       " 'mdates': <module 'matplotlib.dates' from '/home/samuel/.local/lib/python3.8/site-packages/matplotlib/dates.py'>,\n",
+       " 'platform': <module 'platform' from '/home/samuel/anaconda3/lib/python3.8/platform.py'>,\n",
+       " 'OS': 'Linux',\n",
+       " 'plt': <module 'matplotlib.pyplot' from '/home/samuel/.local/lib/python3.8/site-packages/matplotlib/pyplot.py'>,\n",
+       " 'sys': <module 'sys' (built-in)>,\n",
+       " 'Path': pathlib.Path,\n",
+       " 'cv19functions': <module 'cv19functions' from '../src2/utils/cv19functions.py'>,\n",
+       " '_i2': '#Create time range\\nt = np.arange(0,60,0.01)',\n",
+       " 't': array([0.000e+00, 1.000e-02, 2.000e-02, ..., 5.997e+01, 5.998e+01,\n",
+       "        5.999e+01]),\n",
+       " '_i3': 'sat = cv19functions.saturation(5)',\n",
+       " 'sat': <function cv19functions.saturation.<locals>.aux(t, *functions)>,\n",
+       " '_i4': 'sat(10)',\n",
+       " '_i5': 'sat(1)',\n",
+       " '_i6': 'import importlib',\n",
+       " 'importlib': <module 'importlib' from '/home/samuel/anaconda3/lib/python3.8/importlib/__init__.py'>,\n",
+       " '_i7': 'import cv19functions',\n",
+       " '_i8': 'import cv19functions\\nimportlib.reload(cv19functions)\\nfrom cv19functions import cv19functions',\n",
+       " '_i9': 'importlib.reload(cv19functions)\\nimport cv19functions',\n",
+       " '_i10': 'sat = cv19functions.saturation(5)',\n",
+       " '_i11': 'sat(1)',\n",
+       " '_11': 3.7200759760208356e-44,\n",
+       " '_i12': 'sat(10)',\n",
+       " '_12': 3.7200759760208356e-44,\n",
+       " '_i13': 'sat(1)',\n",
+       " '_13': 3.7200759760208356e-44,\n",
+       " '_i14': 'sat = cv19functions.saturation(5)',\n",
+       " '_i15': 'sat(1)',\n",
+       " '_15': 3.7200759760208356e-44,\n",
+       " '_i16': 'sat(100)',\n",
+       " '_16': 3.7200759760208356e-44,\n",
+       " '_i17': 'sat(0)',\n",
+       " '_17': 3.7200759760208356e-44,\n",
+       " '_i18': 'sat(-30)',\n",
+       " '_18': 3.7200759760208356e-44,\n",
+       " '_i19': 'cv19functions.build(5)',\n",
+       " '_19': <function cv19functions.build.<locals>.out(t)>,\n",
+       " '_i20': 'a = cv19functions.build(5)',\n",
+       " 'a': <function cv19functions.build.<locals>.out(t)>,\n",
+       " '_i21': 'a(10)',\n",
+       " '_21': 5,\n",
+       " '_i22': 'a(0)',\n",
+       " '_22': 5,\n",
+       " '_i23': 'a(-10)',\n",
+       " '_23': 5,\n",
+       " '_i24': 'importlib.reload(cv19functions)\\nimport cv19functions',\n",
+       " '_i25': 'sat = cv19functions.saturation(5)',\n",
+       " '_i26': 'sat(0,30)',\n",
+       " '_i27': 'cv19functions.functionAddition(10)',\n",
+       " '_27': <function cv19functions.functionAddition.<locals>.f(t)>,\n",
+       " '_i28': 'cv19functions.functionAddition(10)(0)',\n",
+       " '_i29': 'cv19functions.functionAddition(10,1)(0)',\n",
+       " '_i30': 'importlib.reload(cv19functions)\\nimport cv19functions',\n",
+       " '_i31': 'cv19functions.functionAddition(10,1)(0)',\n",
+       " '_31': 11,\n",
+       " '_i32': 'cv19functions.functionAddition(10,1)(10)',\n",
+       " '_32': 11,\n",
+       " '_i33': 'cv19functions.functionAddition(10)(10)',\n",
+       " '_33': 10,\n",
+       " '_i34': 'cv19functions.functionAddition(10,3)(10)',\n",
+       " '_34': 13,\n",
+       " '_i35': 'sat = cv19functions.saturation(5)',\n",
+       " '_i36': 'a = cv19functions.build(5)',\n",
+       " '_i37': 'sat(0,30)',\n",
+       " '_37': 1.0,\n",
+       " '_i38': 'a = cv19functions.build(5)',\n",
+       " '_i39': 'sat = cv19functions.saturation(a)',\n",
+       " '_i40': 'sat(0,30)',\n",
+       " '_40': 1.0,\n",
+       " '_i41': 'sat(0,2)',\n",
+       " '_41': 8.75651076269652e-27,\n",
+       " '_i42': 'a = cv19functions.build(5)\\nb = cv19functions.build(8)',\n",
+       " 'b': <function cv19functions.build.<locals>.out(t)>,\n",
+       " '_i43': 'sat(0,2,b)',\n",
+       " '_i44': 'sat(0,b)',\n",
+       " '_i45': 'locals()'}"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "locals()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
